--- a/stylua.toml
+++ b/stylua.toml
@@ -1,6 +1,7 @@
 quote_style = "AutoPreferDouble"
 call_parentheses = "None"
 column_width = 90
+collapse_simple_statement = "ConditionalOnly"
 
 [sort_requires]
 enabled = true
